# simple-tensorboard-plugin

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
tensorboard_plugin_service_status/: service_status_plugin.py
tensorboard_plugin_service_status/static/: index.tsx
